@@ -19,13 +19,15 @@ import org.mmbase.bridge.Node;
 import org.mmbase.servlet.BridgeServlet;
 
 import com.finalist.cmsc.beans.om.NavigationItem;
+import com.finalist.cmsc.beans.om.Page;
 import com.finalist.cmsc.mmbase.ResourcesUtil;
 import com.finalist.cmsc.navigation.PagesUtil;
+import com.finalist.cmsc.navigation.ServerUtil;
 import com.finalist.cmsc.portalImpl.PortalConstants;
 import com.finalist.cmsc.repository.ContentElementUtil;
+import com.finalist.cmsc.services.search.PageInfo;
+import com.finalist.cmsc.services.search.Search;
 import com.finalist.cmsc.services.sitemanagement.SiteManagement;
-import com.finalist.cmsc.util.HttpUtil;
-import com.finalist.cmsc.util.ServerUtil;
 import com.finalist.pluto.portalImpl.core.PortalEnvironment;
 import com.finalist.pluto.portalImpl.core.PortalURL;
 
@@ -37,17 +39,17 @@ public class RedirectServlet extends BridgeServlet {
     @Override
     protected Map<String, Integer> getAssociations() {
         Map<String, Integer> a = super.getAssociations();
-        a.put("content", Integer.valueOf(50));
+        a.put("content", new Integer(50));
         return a;
     }
-
+    
     @Override
     public void init(ServletConfig config) throws ServletException {
         super.init(config);
         String forwardRequest = config.getInitParameter("forwardRequest");
         this.forwardRequest = Boolean.valueOf(forwardRequest);
     }
-
+    
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws IOException {
         doRedirect(request, response);
@@ -57,7 +59,7 @@ public class RedirectServlet extends BridgeServlet {
     protected void doPost(HttpServletRequest request, HttpServletResponse response) throws IOException {
         doRedirect(request, response);
     }
-
+    
     private void doRedirect(HttpServletRequest request, HttpServletResponse response) throws IOException {
         QueryParts queryParts = readQueryFromRequestURI(request, null);
         Node node = getNode(queryParts);
@@ -66,7 +68,7 @@ public class RedirectServlet extends BridgeServlet {
             return;
         }
         String redirect = null;
-
+        
         String managerName = node.getNodeManager().getName();
         if (ResourcesUtil.URLS.equals(managerName)) {
             redirect = node.getStringValue("url");
@@ -77,7 +79,7 @@ public class RedirectServlet extends BridgeServlet {
         if (ResourcesUtil.IMAGES.equals(managerName)) {
             redirect = ResourcesUtil.getServletPath(node, node.getStringValue("number"));
         }
-
+        
         /* *****************************
          * All types above this comment should all be redirected and not forwarded with a dispatcher
          * *****************************
@@ -86,14 +88,14 @@ public class RedirectServlet extends BridgeServlet {
             response.sendRedirect(redirect);
             return;
         }
-
+        
         if (PagesUtil.isPageType(node)) {
             NavigationItem item = SiteManagement.getNavigationItem(node.getNumber());
             if (item != null) {
                 redirect = getPortalUrl(request, item);
             }
         }
-
+        
         if (ContentElementUtil.isContentElement(node)) {
             PageInfo pageInfo = null;
             if (ServerUtil.useServerName()) {
@@ -102,12 +104,12 @@ public class RedirectServlet extends BridgeServlet {
             else {
                 pageInfo = Search.findDetailPageForContent(node);
             }
-
+            
             if (pageInfo != null) {
                 PortalURL u = new PortalURL(pageInfo.getHost(), request, pageInfo.getPath());
                 String elementId = String.valueOf(node.getNumber());
                 // When contentelement and the same number then it is a contentportlet
-                if (! ( "contentelement".equals(pageInfo.getParametername())
+                if (! ( "contentelement".equals(pageInfo.getParametername()) 
                         && elementId.equals(pageInfo.getParametervalue()) ) ) {
                     u.setRenderParameter(pageInfo.getWindowName(), "elementId", new String[] { elementId } );
                 }
@@ -118,7 +120,7 @@ public class RedirectServlet extends BridgeServlet {
                 redirect = u.toString();
             }
         }
-
+        
         if (redirect != null) {
             if (this.forwardRequest) {
                 if (redirect.indexOf("://") > -1 && ServerUtil.useServerName()) {
@@ -128,15 +130,7 @@ public class RedirectServlet extends BridgeServlet {
                     if (hostIndex > -1) {
                         // The same host as the contenturl. strip servername and port
                         int firstSlash = redirect.indexOf("/", hostIndex + "://".length());
-                        if (firstSlash > -1) {
-                           redirect = redirect.substring(firstSlash);
-                        }
-                        else {
-                           // firstSlash is -1 when there is a contentportlet on the homepage
-                           // and servername is true
-                           response.sendRedirect(redirect);
-                           return;
-                        }
+                        redirect = redirect.substring(firstSlash);
                     }
                     else {
                         // can not convert so just redirect.
@@ -154,7 +148,7 @@ public class RedirectServlet extends BridgeServlet {
                 try {
                     RequestDispatcher rd = super.getServletContext().getNamedDispatcher(PortalConstants.CMSC_PORTAL_SERVLET);
                     HttpServletRequest internalRequest = new InternalRedirectHttpServletRequest(request, redirect);
-                    PortalEnvironment internalEnv = new PortalEnvironment(internalRequest, response);
+                    PortalEnvironment internalEnv = new PortalEnvironment(internalRequest, response, this.getServletConfig());
                     rd.forward(internalRequest, response);
                 }
                 catch (ServletException e) {
@@ -169,7 +163,7 @@ public class RedirectServlet extends BridgeServlet {
             response.sendError(HttpServletResponse.SC_NOT_FOUND, "No page found");
         }
     }
-
+    
     private String getPortalUrl(HttpServletRequest request, NavigationItem item) {
         String host = null;
         if(ServerUtil.useServerName()) {
@@ -180,25 +174,19 @@ public class RedirectServlet extends BridgeServlet {
         PortalURL u = new PortalURL(host, request, link);
         return u.toString();
     }
-
+    
     class InternalRedirectHttpServletRequest extends HttpServletRequestWrapper {
-
+        
         private String pagePath;
 
         public InternalRedirectHttpServletRequest(HttpServletRequest request, String pagePath) {
             super(request);
-            this.pagePath = pagePath;
-        }
-
-        @Override
-        public String getServletPath() {
-            return pagePath;
+            this.pagePath = pagePath;            
         }
         
         @Override
-        public StringBuffer getRequestURL() {
-          String webapp = HttpUtil.getWebappUri(this);
-          return new StringBuffer(webapp).append(pagePath.substring(1));
+        public String getServletPath() {
+            return pagePath;
         }
     }
 }
